# cborphine

./: .gitignore  LICENSE  Makefile.am  Makefile.in  cbor.c  cbor.h  configure  configure.ac  premake5.lua  test.c
example/: test.c
include/: cbor.h  internal.h
src/: cbor.c  read.c  write.c
test/: cborphine-boolean-test.cpp  cborphine-boolean-test.h  cborphine-double-test.cpp  cborphine-double-test.h  cborphine-float-test.cpp  cborphine-float-test.h  cborphine-int-test.cpp  cborphine-int-test.h  cborphine-string-test.cpp  cborphine-string-test.h  cborphine-test.cpp  cborphine-test.h  cborphine-uint-test.cpp  cborphine-uint-test.h  main.cpp  test.c
